--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body{
     }
 
     100% {
-        transform: translateX(200px)  rotate(90deg);
+        transform: translateX(200px)  rotate(1080deg);
     }
 }
 .move-to-heart{
@@ -45,9 +45,16 @@ body{
     color: white;
     display: none;
 }
-.move-to-target{
-    transform: translate(100px, 50px);
+#vanvo{
+    width: 80vw;
+    position: absolute;
+    height: 50vh;
+    left: 50px;
+    top: 200px;
+    word-wrap: break-word;
+    line-height: 1.3;
 }
+
 .pic1{
     height: 55px;
     width: 35px;
@@ -167,7 +174,7 @@ body{
     background-color: black;
     position: absolute;
     top: 405px;
-    left: 50px;
+    left: 60px;
 }
 .pic16{
     height: 55px;
@@ -175,7 +182,7 @@ body{
     background-color: black;
     position: absolute;
     top: 395px;
-    left: 30px;
+    left: 35px;
 }
 .pic17{
     height: 55px;
